2014-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Convert Olena to UTF-8.

	* AUTHORS,
	* README:
	Here.
	* doc/Doxyfile.in (INPUT_ENCODING): Set to UTF-8.
	* doc/Makefile.am (contributors.html): Treat rst2html input and
	output as UTF-8.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove mentions to trash/ directories in Olena.

	* bootstrap: Here.

2014-06-19  Roland Levillain  <roland@lrde.epita.fr>

	* AUTHORS: Update and clean up.

2014-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Update the list of Olena- and Milena-related publications.

	* README (Bibliography): Here.

2014-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Update software version numbers.

	* README (Required Software, Configuration, Supported Platforms)
	* HACKING (Required Software):
	Here.

2014-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Update instructions for releases.

	* HACKING (Releasing): Here.

2011-01-10  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac (APPS_CXXFLAGS_NODEBUG): New precious variable.

2011-01-10  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Configure milena/apps/bench/Makefile.

2013-09-11  Roland Levillain  <roland@lrde.epita.fr>

	Generate more uniform Makefile helpers for unit tests.

	* build-aux/build_unit_test.sh: Write Make variables with
	parentheses instead of braces.
	Add a space before `='.

2013-09-11  Roland Levillain  <roland@lrde.epita.fr>

	* build-aux/build_unit_test.sh: Properly handle QT_LIBS.

2013-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Olena: Remove Milena's build dir from the file inclusion path.

	* doc/Makefile.am (AM_CPPFLAGS): Here.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Define PACKAGE_AUTHORS in configure.ac.

	* configure.ac (PACKAGE_AUTHORS): New variable.  Define it both as
	a C/C++ preprocessor symbol (using AC_DEFINE_UNQUOTED) and as an
	Autoconf output variable (via AC_SUBST).

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>
