@@ -1,3 +1,9 @@
+2014-06-26  Roland Levillain  <roland@lrde.epita.fr>
+
+	Make Olena more compatible with BSD Make.
+
+	* doc/Makefile.am: Do not use `$<' outside suffix rules.
+
 2014-06-25  Roland Levillain  <roland@lrde.epita.fr>
 
 	Convert Olena to UTF-8.
